...

    <include
        layout="@layout/content_main"
        android:padding="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMemoFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@android:color/primary_text_light"
        app:backgroundTint="#FFFFFF"
...
